--- a/source/_posts/Team ITsooda/2018-04-03-prologue.md
+++ b/source/_posts/Team ITsooda/2018-04-03-prologue.md
@@ -1,7 +1,7 @@
 ---
 title:  "프롤로그 : 잇수다 탄생 비화"
 date:   2018-04-03
-authorId: junmon
+authorId: Team ITsooda
 comments: true
 tags: [start, Team_ITsooda, ITsooda]
 layout: post
